# CarPlateRecognizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Contracts/: ucn.hpp
Tests/: CMakeLists.txt  isp_tests.cpp  registration_plate_tests.cpp  ucn_tests.cpp  vehicle_register_tests.cpp
lib/: CMakeLists.txt  carRecognizer.cpp
lib/Contracts/: isp.hpp  registration_plate.hpp  ucn.hpp  vehicle_register.hpp
lib/Entities/: isp.cpp  registration_plate.cpp  ucn.cpp  vehicle_register.cpp
lib/Services/: isp.cpp  registration_plate.cpp  vehicle_register.cpp
lib/Tests/: isp_tests.cpp  registration_plate_tests.cpp  tests_main.cpp
